--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,27 @@
-<div>
-    <h1><a href="/">Django</a></h1>
-</div>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Django</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    
+</head>
+<body>
+    <header>
+        <h1 class="page-header"><a href="https://tutorial.djangogirls.org" target="_blank">Django</a></h1>
+    </header>
 
-{% for post in posts %}
-    <div>
-        <p> publicado: {{ post.published_date }}</p>
+    {% for post in posts %}
+    <div class="post">
         <h2><a href="">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
+        <p> publicado: {{ post.published_date }}</p>
     </div>
 {% endfor %}
+</body>
+</html>
+
